--- a/.env
+++ b/.env
@@ -24,13 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.163.com
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=13986670515@163.com
-MAIL_PASSWORD=qaz13986670515
+MAIL_USERNAME=lu321yuan@gmail.com
+MAIL_PASSWORD=uebcxmbypdfyshax
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=13986670515@163.com 
-MAIL_FROM_NAME=于诗洋
+MAIL_FROM_ADDRESS=lu321yuan@gmail.com
+MAIL_FROM_NAME=Rogen
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
